--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Nerko One', cursive;
 }
 
 .contenitore{
@@ -14,7 +15,7 @@
 .quadrato{
   width: 100px;
   height: 130px;
-  margin: 20px 10px;
+  margin: 10px 3px;
   border-radius: 10px;
   display: inline-block;
   text-align: center;
